--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
   <string name="member_score_absent_text">결석</string>
   <string name="member_score_tardy_text">지각</string>
 
+  <string name="admin_main_attend_management_text">출결 관리</string>
+  <string name="admin_main_see_all_session_text">전체 보기</string>
+  <string name="admin_main_confirm_button">확인</string>
+  <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
 </resources>
