--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
   <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
   <string name="login_kakao_login_text">카카오 로그인</string>
 
+  <string name="member_main_bottom_navigation_todays_session_text">오늘의 세션</string>
+  <string name="member_main_bottom_navigation_qr_text">QR</string>
+  <string name="member_main_bottom_navigation_attendance_detail_text">출결 확인</string>
+
   <string name="member_score_title">출결 점수 확인</string>
   <string name="member_score_now_my_score_text">지금 내 점수는</string>
   <string name="member_score_attend_text">출석</string>
