멤버 설정 화면 구현 (#52)
* App bar setting button 클릭 이벤트 처리 수정

- Icon의 clickable이 backButton에 연관되어 있는 오류 수정
- Icon에 clickable 설정하면 IconButton의 click 처리가 안 되기 때문에 Icon의 clickable 삭제, IconButton에 enabled과 onclick 추가

* member setting screen 추가

* orange alpha 색상 추가 정의

* member setting screen 구현

* member setting screen 하단 padding 수정

* member setting 문구 리소스 추가

* member setting screen 버전 정보 표시

* member setting screen 기수 정보 함수명 변경 Box -> GroupInfo

* member setting screen 회원탈퇴 다이얼로그 추가 중

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
   <string name="admin_main_see_all_session_text">전체 보기</string>
   <string name="admin_main_confirm_button">확인</string>
   <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
+
+  <string name="member_setting_title">설정</string>
+  <string name="member_setting_version_info_text">버전 정보</string>
+  <string name="member_setting_privacy_policy_text">개인정보 처리방침</string>
+  <string name="member_setting_logout_text">로그아웃</string>
+  <string name="member_setting_withdraw_text">회원탈퇴</string>
+  <string name="member_setting_withdraw_dialog_title_text">정말 탈퇴하시겠어요?</string>
+  <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요</string>
+  <string name="member_setting_withdraw_dialog_negative_button">취소</string>
+  <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
 </resources>
