--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
   <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요</string>
   <string name="member_setting_withdraw_dialog_negative_button">취소</string>
   <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
+
+  <string name="help_title">도움말</string>
 </resources>
