--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="admin_main_confirm_button">확인</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
 
+    <string name="member_signup_choose_team">소속 팀을\n알려주세요</string>
+    <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
+    <string name="member_signup_team_number">%d팀</string>
+    <string name="member_signup_team_confirm">확인</string>
 </resources>
