--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
   <string name="member_setting_logout_text">로그아웃</string>
   <string name="member_setting_withdraw_text">회원탈퇴</string>
   <string name="member_setting_withdraw_dialog_title_text">정말 탈퇴하시겠어요?</string>
-  <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요</string>
+  <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요.</string>
   <string name="member_setting_withdraw_dialog_negative_button">취소</string>
   <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
 </resources>
