--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
   <string name="member_main_bottom_navigation_qr_text">QR</string>
   <string name="member_main_bottom_navigation_attendance_detail_text">출결 확인</string>
 
+  <string name="today_session_attendance_before_text">아직 출석 전이에요</string>
+  <string name="today_session_attendance_after_text">출석을 완료했어요</string>
+
   <string name="member_score_title">출결 점수 확인</string>
   <string name="member_score_now_my_score_text">지금 내 점수는</string>
   <string name="member_score_attend_text">출석</string>
@@ -25,7 +28,7 @@
   <string name="member_setting_logout_text">로그아웃</string>
   <string name="member_setting_withdraw_text">회원탈퇴</string>
   <string name="member_setting_withdraw_dialog_title_text">정말 탈퇴하시겠어요?</string>
-  <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요</string>
+  <string name="member_setting_withdraw_dialog_content_text">탈퇴하면 모든 정보가 사라져요.</string>
   <string name="member_setting_withdraw_dialog_negative_button">취소</string>
   <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
 </resources>
