--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
   <string name="admin_main_confirm_button">확인</string>
   <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
 
+  <string name="name_title">이름을 작성해주세요</string>
+  <string name="name_subtitle">실명을 작성해야 출석을 확인할 수 있어요</string>
+  <string name="name_example_hint">ex. 야뿌</string>
+
   <string name="member_setting_title">설정</string>
   <string name="member_setting_version_info_text">버전 정보</string>
   <string name="member_setting_privacy_policy_text">개인정보 처리방침</string>
