--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
   <string name="name_subtitle">실명을 작성해야 출석을 확인할 수 있어요</string>
   <string name="name_example_hint">ex. 야뿌</string>
   <string name="name_next_button">다음</string>
+  <string name="name_cancel_dialog_title">입력을 취소할까요?</string>
+  <string name="name_cancel_dialog_subtitle">언제든 다시 돌아올 수 있어요</string>
+  <string name="name_cancel_dialog_no">아니오</string>
+  <string name="name_cancel_dialog_cancel">취소합니다</string>
 
   <string name="member_setting_title">설정</string>
   <string name="member_setting_version_info_text">버전 정보</string>
