--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-  <!-- convention -->
-  <!-- screen name_description_component name -->
-  <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
-  <string name="login_kakao_login_text">카카오 로그인</string>
+    <!-- convention -->
+    <!-- screen name_description_component name -->
+    <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
+    <string name="login_kakao_login_text">카카오 로그인</string>
 
-  <string name="member_main_bottom_navigation_today_session_text">오늘 세션</string>
-  <string name="member_main_bottom_navigation_qr_text">QR</string>
-  <string name="member_main_bottom_navigation_attendance_detail_text">출결 확인</string>
+    <string name="member_main_bottom_navigation_today_session_text">오늘 세션</string>
+    <string name="member_main_bottom_navigation_qr_text">QR</string>
+    <string name="member_main_bottom_navigation_attendance_detail_text">출결 확인</string>
 
   <string name="today_session_attendance_before_text">아직 출석 전이에요</string>
   <string name="today_session_attendance_after_text">출석을 완료했어요</string>
@@ -17,10 +17,15 @@
   <string name="member_score_absent_text">결석</string>
   <string name="member_score_tardy_text">지각</string>
 
-  <string name="admin_main_attend_management_text">출결 관리</string>
-  <string name="admin_main_see_all_session_text">전체 보기</string>
-  <string name="admin_main_confirm_button">확인</string>
-  <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
+    <string name="admin_main_attend_management_text">출결 관리</string>
+    <string name="admin_main_see_all_session_text">전체 보기</string>
+    <string name="admin_main_confirm_button">확인</string>
+    <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
+
+    <string name="member_signup_choose_team">소속 팀을\n알려주세요</string>
+    <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
+    <string name="member_signup_team_number">%d팀</string>
+    <string name="member_signup_team_confirm">확인</string>
 
   <string name="member_setting_title">설정</string>
   <string name="member_setting_version_info_text">버전 정보</string>
