--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -46,6 +46,10 @@
   <string name="member_setting_withdraw_dialog_negative_button">취소</string>
   <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
 
+  <string name="member_qr_time_inform_text">2시 5분까지 출석 체크를 완료해 주세요!</string>
+  <string name="member_qr_late_inform_text">이후 출석은 지각으로 처리돼요</string>
+
+
   <string name="help_title">도움말</string>
   <string name="help_basic_info_yapp_text">YAPP</string>
   <string name="help_basic_info_title_text">의 구성원은\n모든 세션에 필수적으로 참여해야 해요!</string>
