refactor: delete unnecessary code
불필요한 uiState를 제거합니다
불필요한 이벤트 처리를 제거합니다
카메라 권한이 거부된 경우 권한을 요청하는 다이얼로그를 보여줍니다

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -48,6 +48,10 @@
 
   <string name="member_qr_time_inform_text">2시 5분까지 출석 체크를 완료해 주세요!</string>
   <string name="member_qr_late_inform_text">이후 출석은 지각으로 처리돼요</string>
+  <string name="member_qr_permission_dialog_title_text">카메라 권한이 필요합니다</string>
+  <string name="member_qr_permission_dialog_content_text">[설정] > [권한]에서 사용으로 활성화해 주세요</string>
+  <string name="member_qr_permission_dialog_negative_text">닫기</string>
+  <string name="member_qr_permission_dialog_positive_text">설정</string>
 
 
   <string name="help_title">도움말</string>
