--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
   <string name="absent">결석</string>
   <string name="tardy">지각</string>
   <string name="tbd">예정</string>
-
+  <string name="empty_message">정보를 불러오지 못했어요</string>
 </resources>
