도움말 화면 수정

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -57,22 +57,20 @@
     <string name="help_title">도움말</string>
     <string name="help_basic_info_yapp_text">YAPP</string>
     <string name="help_basic_info_title_text">의 구성원은\n모든 세션에 필수적으로 참여해야 해요!</string>
-    <string name="help_basic_info_content_text">지각과 결석 규칙에 대해 알려드릴게요</string>
-    <string name="help_basic_info_type_text">의 경우</string>
-    <string name="help_basic_info_type_pre_notice_text">사전 통보</string>
-    <string name="help_basic_info_type_not_notice_text">미통보</string>
+    <string name="help_basic_info_content_text">전체 세션만 출석체크를 진행해요.</string>
     <string name="help_basic_info_tardy_text">지각</string>
     <string name="help_basic_info_absent_text">결석</string>
     <string name="help_basic_info_score_text">%s점</string>
+    <string name="help_basic_info_tip_text">*운영진에게 요청 시 결석 1회는 출석으로 인정돼요.</string>
     <string name="help_detail_info_title_text">읽어보세요!</string>
-    <string name="help_detail_info_content1_text">출결 점수는 100점에서 시작해요</string>
-    <string name="help_detail_info_content2_start_text">지각 및 결석 사유는\ </string>
-    <string name="help_detail_info_content2_bold_text">하루 전까지</string>
-    <string name="help_detail_info_content2_end_text">\ 알려주세요</string>
-    <string name="help_detail_info_content3_text">아르바이트, 인턴, 직장인 우대사항은 없어요</string>
-    <string name="help_detail_info_content4_start_text">점수가 </string>
-    <string name="help_detail_info_content4_bold_text">\ 70점 미만</string>
-    <string name="help_detail_info_content4_end_text">이 되는 회원은 운영진의 심의 하에 제명될 수 있으니 출결에 유의해주세요</string>
+    <string name="help_detail_info_content1_start_text">출결 점수는&#160;</string>
+    <string name="help_detail_info_content1_bold_text">100점</string>
+    <string name="help_detail_info_content1_end_text">&#160;에서 시작해요.</string>
+    <string name="help_detail_info_content2_start_text">점수가&#160;</string>
+    <string name="help_detail_info_content2_bold_text">70점 미만</string>
+    <string name="help_detail_info_content2_end_text">&#160;이 되는 회원은 운영진의 심의 하에 제명될 수 있으니 출결에 유의해주세요.</string>
+    <string name="help_detail_info_content3_text">회비 납부 무단 연체 시 연체 1일마다 5점이 감점돼요.</string>
+    <string name="help_detail_info_content4_text">아르바이트, 인턴, 직장인 우대사항은 없어요.</string>
 
     <string name="admin_total_score_title">누적 출결 점수</string>
     <string name="admin_total_score_box_text">점수가 실시간으로 반영되고 있어요</string>
