--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -65,10 +65,10 @@
     <string name="help_detail_info_title_text">읽어보세요!</string>
     <string name="help_detail_info_content1_start_text">출결 점수는&#160;</string>
     <string name="help_detail_info_content1_bold_text">100점</string>
-    <string name="help_detail_info_content1_end_text">&#160;에서 시작해요.</string>
+    <string name="help_detail_info_content1_end_text">에서 시작해요.</string>
     <string name="help_detail_info_content2_start_text">점수가&#160;</string>
     <string name="help_detail_info_content2_bold_text">70점 미만</string>
-    <string name="help_detail_info_content2_end_text">&#160;이 되는 회원은 운영진의 심의 하에 제명될 수 있으니 출결에 유의해주세요.</string>
+    <string name="help_detail_info_content2_end_text">이 되는 회원은 운영진의 심의 하에 제명될 수 있으니 출결에 유의해주세요.</string>
     <string name="help_detail_info_content3_text">회비 납부 무단 연체 시 연체 1일마다 5점이 감점돼요.</string>
     <string name="help_detail_info_content4_text">아르바이트, 인턴, 직장인 우대사항은 없어요.</string>
 
