회원가입 시 직군 선택 (#100)
* 팀 숫자 선택 애니메이션 추가

* 뒤로가기 기능 수정

* set member

* add member id

* 코드 정리

* BaseUseCase 에 Dispatcher 설정

* Dispatcher 주입 방식 변경

* 파이어베이스 연결 및 에러 헨들링

* 이름 공백 막기

* conflict 해결

* platform에서 type으로 이름 변경

* LoginViewModel에 member id set 로직 추가

* 세션 리스트 추가

* 직군 선택 화면

* 직군 선택 시 이동

* 직군 선택 화면 구현

* 팀 type 이름 수정

* BaseUseCase 에 Dispatcher 설정

* Dispatcher 주입 방식 변경

* 로그인 시 Member id DataStore 에 저장할 수 있도록 개선

* QR 시간 아닐 때, 토스트 띄우기

* 세션 리스트 받아올 수 있도록 data class 수정

* 앞으로 필요할 usecase 추가

* getMemberId 수정

* getMemberId impl 수정

* 파이어베이스 연결

Co-authored-by: jsh-me <ppm_it@naver.com>

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="admin_main_see_all_session_text">전체 보기</string>
     <string name="admin_main_confirm_button">확인</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
+    
+    <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
+    <string name="member_signup_position_confirm">확인</string>
 
     <string name="member_signup_choose_team">소속 팀을\n알려주세요</string>
     <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
