--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <string name="admin_main_attend_management_text">출결 관리</string>
     <string name="admin_main_see_all_session_text">전체 보기</string>
-    <string name="admin_main_confirm_button">확인</string>
+    <string name="admin_main_admin_button">관리</string>
     <string name="admin_main_all_score_text">20기 누적 출결 점수</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
     
