--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -20,8 +20,10 @@
     <string name="member_score_tardy_text">지각</string>
 
     <string name="admin_main_attend_management_text">출결 관리</string>
+    <string name="admin_main_finish_all_sessions_text">모든 세션을 끝마쳤습니다</string>
     <string name="admin_main_see_all_session_text">전체 보기</string>
-    <string name="admin_main_confirm_button">확인</string>
+    <string name="admin_main_admin_button">관리</string>
+    <string name="admin_main_all_score_text">20기 누적 출결 점수</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
     
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
