--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="login_kakao_login_text">카카오 로그인</string>
 
     <string name="member_main_qr_enter_failed_toast_message">지금은 출석할 수 없어요</string>
+    <string name="member_main_qr_enter_completed_toast_message">이미 출석을 완료했어요</string>
 
     <string name="member_main_bottom_navigation_today_session_text">오늘 세션</string>
     <string name="member_main_bottom_navigation_qr_text">QR</string>
