--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,7 +3,12 @@
     <!-- screen name_description_component name -->
     <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
     <string name="login_kakao_login_text">카카오 로그인</string>
+    <string name="Cancel">취소</string>
+    <string name="Ok">확인</string>
 
+    <string name="login_admin_title">암호를 대라!</string>
+    <string name="login_admin_content">코드 넘버를 입력해주세요</string>
+    <string name="login_admin_password_placeholder">****</string>
     <string name="member_main_qr_enter_failed_toast_message">지금은 출석할 수 없어요</string>
     <string name="member_main_qr_enter_completed_toast_message">이미 출석을 완료했어요</string>
 
