--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
     
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
-    <string name="member_signup_position_confirm">확인</string>
+    <string name="member_signup_position_next">다음</string>
 
     <string name="member_signup_choose_team">소속 팀을\n알려주세요</string>
     <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
