--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
     
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
-    <string name="member_signup_position_next">다음</string>
+    <string name="member_signup_team_start_yapp">YAPP 시작하기</string>
 
     <string name="member_signup_choose_team">소속 팀을\n알려주세요</string>
     <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
@@ -61,6 +61,7 @@
     <string name="member_setting_withdraw_dialog_negative_button">취소</string>
     <string name="member_setting_withdraw_dialog_positive_button">탈퇴합니다</string>
     <string name="member_setting_error_message">오류가 발생했어요. 다시 시도해주세요.</string>
+    <string name="member_setting_select_team">팀 선택하기</string>
 
     <string name="member_qr_time_inform_text">까지 출석해 주세요.</string>
     <string name="member_qr_late_inform_text">30분까지는 지각, 그 이후는 결석으로 처리돼요.</string>
