fix: deploy preview시 Crashtics Id 에러가 발생하지 않도록 수정
/**
The Crashlytics build ID is missing. This occurs when Crashlytics tooling is absent from your app's build configuration. Please review Crashlytics onboarding instructions and ensure you have a valid Crashlytics account.
*/
해당 이슈를 수정합니다.

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <!-- convention -->
     <!-- screen name_description_component name -->
+    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
+
     <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
     <string name="login_kakao_login_text">카카오 로그인</string>
     <string name="Cancel">취소</string>
