--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="member_signup_team_number">%d팀</string>
     <string name="member_signup_team_confirm">확인</string>
 
+    <string name="member_need_select_team">팀을 선택해 주세요</string>
+    <string name="member_need_select_team_description">원활한 출석체크를 위해\n팀과 직무 선택이 꼭 필요해요!</string>
+    <string name="member_need_select_team_next_time">다음에요</string>
+
     <string name="name_title">이름을 작성해주세요</string>
     <string name="name_subtitle">실명을 작성해야 출석을 확인할 수 있어요</string>
     <string name="name_example_hint">ex. 야뿌</string>
