chore: Version Up (1.2.0 -> 1.3.0) 🔥🔥🔥 (#316)
* [ Feature ] : 출석체크 fastlane cd 작업을 추가했어요 (#233)

* chore: Version Up (1.1.0 -> 1.2.0) 🔥🔥🔥 (#230)

* refactor: callbackFlow 구독 상황이 아니면 리스너를 null 처리하도록 수정 (#216)

* fix: 개인정보 처리방침 화면 앱바 다크모드 적용 (#217)

* Resolve #212 어드민 멤버출결점수 정렬 가능하도록 변경 (#218)

* feat: State를 생명주기에 맞게 수집하기 위한 Flow 확장함수 추가

* remove: 사용하지 않는 유닛테스트 제거

* chore: compose 안정성 지표를 나타내는 report option

* chore: List에 안정성 부여하기 위해 Immutable Collection 사용, common에 corouitne 및 lifecycle viewmodel 의존성 추가

* refactor: 직군 별 정렬이 가능하도록 변경(UI WIP)

* refactor: 상속받은 함수에서 state 사용 가능하도록 protected로 변경

* refactor: unstable 클래스 stable하도록 변경

* refactor: remove wildcard import

* refactor: Immutable List Compose Compiler에 의해 Stable로 변경되지 않아 제거

* 컴포즈 버전 업데이트 (1.1.0 -> 1.4.1) (#219)

* refactor: Compose 버전 업데이트

Compose를 최신버전 으로 업데이트 함에 따라 다음과 같은 라이브러리 업데이트 합니다.
(변경된 라이브러리들은 구동에 있어 필수적인 변경만 포함합니다)

컴포즈의 버전을 업데이트 하며 그에 대응하는 Kotlin 버전을 업데이트 합니다.
- Compose : 1.1.0 -> 1.4.1
- Kotlin : 1.6.1 -> 1.8.10

Kotlin 버전이 업데이트 됨에 따라 아래의 버전을 업데이트 합니다.
- Dagger : 2.40.1 ->  2.45

Compose를 업데이트 한 후 Lottie가 제대로 동작하지 않아 버전을 업데이트 합니다.
- Lottie : 5.0.1 -> 6.0.0

AGP, TargetSDK, GoogleService를 버전을 업데이트 합니다.
- AGP : 7.0.4 -> 7.3.0
- TargetSDK : 31 -> 33

* remove: warning 해결

* remove: optimize import

모든 모듈에 불필요한 import를 제거합니다.

* fix: CompileSDKVersion 업데이트 후 발생하는 warning 제거

* refactor: minSDK 24 -> 26 버전 업

* Revert "컴포즈 버전 업데이트 (1.1.0 -> 1.4.1) (#219)" (#221)

This reverts commit c4c1312b501c6ffd0d7962287c6d98c7424a06b3.

* 컴포즈 버전 업데이트 (1.1.0 -> 1.4.1) (#222)

* refactor: Compose 버전 업데이트

Compose를 최신버전 으로 업데이트 함에 따라 다음과 같은 라이브러리 업데이트 합니다.
(변경된 라이브러리들은 구동에 있어 필수적인 변경만 포함합니다)

컴포즈의 버전을 업데이트 하며 그에 대응하는 Kotlin 버전을 업데이트 합니다.
- Compose : 1.1.0 -> 1.4.1
- Kotlin : 1.6.1 -> 1.8.10

Kotlin 버전이 업데이트 됨에 따라 아래의 버전을 업데이트 합니다.
- Dagger : 2.40.1 ->  2.45

Compose를 업데이트 한 후 Lottie가 제대로 동작하지 않아 버전을 업데이트 합니다.
- Lottie : 5.0.1 -> 6.0.

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,10 +1,22 @@
 <resources>
     <!-- convention -->
     <!-- screen name_description_component name -->
+    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
+
     <string name="login_attendance_introduce_text">3초만에 끝나는\n간편한 출석체크</string>
     <string name="login_kakao_login_text">카카오 로그인</string>
     <string name="Cancel">취소</string>
     <string name="Ok">확인</string>
+    <string name="Exit">종료</string>
+
+    <string name="required_update_title">업데이트가 필요해요!</string>
+    <string name="required_update_content">더 멋진 기능을 사용하기 위해\n지금 바로 업데이트를 진행해 주세요</string>
+    <string name="necessary_update_title">새로운 버전이 업데이트 되었어요</string>
+    <string name="necessary_update_content">야뿌의 사용성이 개선되었어요!\n지금 바로 확인해보세요</string>
+    <string name="fail_load_version_title">버전 정보를 불러오는 데 실패했어요</string>
+    <string name="fail_load_version_content">네트워크 환경 확인 후\n애플리케이션을 재실행해주세요</string>
+    <string name="update_confirm">업데이트</string>
+    <string name="update_cancel">다음에요</string>
 
     <string name="login_admin_title">암호를 대라!</string>
     <string name="login_admin_content">코드 넘버를 입력해주세요</string>
@@ -31,7 +43,11 @@
     <string name="admin_main_admin_button">관리</string>
     <string name="admin_main_all_score_text">20기 누적 출결 점수</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
-    
+
+    <string name="member_signup_password_title">너, 내 동료가 돼라!</string>
+    <string name="member_signup_password_subtitle">암호 코드 4자리를 입력해주세요</string>
+    <string name="member_signup_password_wrong_code">틀린 코드입니다</string>
+
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
     <string name="member_signup_team_start_yapp">YAPP 시작하기</string>
 
@@ -39,6 +55,10 @@
     <string name="member_signup_choose_team_number">하나만 더 알려주세요</string>
     <string name="member_signup_team_number">%d팀</string>
     <string name="member_signup_team_confirm">확인</string>
+
+    <string name="member_need_select_team">팀을 선택해 주세요</string>
+    <string name="member_need_select_team_description">원활한 출석체크를 위해\n팀과 직무 선택이 꼭 필요해요!</string>
+    <string name="member_need_select_team_next_time">다음에요</string>
 
     <string name="name_title">이름을 작성해주세요</string>
     <string name="name_subtitle">실명을 작성해야 출석을 확인할 수 있어요</string>
