--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -45,8 +45,8 @@
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
 
     <string name="member_signup_password_title">너, 내 동료가 돼라!</string>
-    <string name="member_signup_password_subtitle">암호 코드 4자리를 입력해주세요</string>
-    <string name="member_signup_password_wrong_code">틀린 코드입니다</string>
+    <string name="member_signup_password_subtitle">암호 숫자 4자리를 입력해주세요</string>
+    <string name="member_signup_password_wrong_code">틀린 비밀번호입니다</string>
 
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
     <string name="member_signup_team_start_yapp">YAPP 시작하기</string>
