--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -44,8 +44,10 @@
     <string name="admin_main_all_score_text">20기 누적 출결 점수</string>
     <string name="admin_main_see_all_score_text">누적 점수 확인하기</string>
 
-    <string name="member_signup_password_title">%1$s 세션 출석</string>
-    <string name="member_signup_password_subtitle">암호 코드 4자리를 입력해주세요</string>
+    <string name="member_signup_password_title">너, 내 동료가 돼라!</string>
+    <string name="member_signup_password_subtitle">암호 숫자 4자리를 입력해주세요</string>
+    <string name="member_session_password_title">%1$s 세션 출석</string>
+    <string name="member_session_password_subtitle">암호 코드 4자리를 입력해주세요</string>
     <string name="member_signup_password_wrong_code">틀린 비밀번호입니다</string>
 
     <string name="member_signup_choose_position">속한 직군을\n알려주세요</string>
