--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@
 
     <string name="admin_total_score_title">누적 출결 점수</string>
     <string name="admin_total_score_box_text">점수가 실시간으로 반영되고 있어요</string>
+
+    <string name="create_session">세션 생성</string>
 </resources>
