--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="Cancel">취소</string>
     <string name="Ok">확인</string>
     <string name="Exit">종료</string>
+    <string name="complete">완료</string>
 
     <string name="required_update_title">업데이트가 필요해요!</string>
     <string name="required_update_content">더 멋진 기능을 사용하기 위해\n지금 바로 업데이트를 진행해 주세요</string>
@@ -116,4 +117,8 @@
 
     <string name="admin_total_score_title">누적 출결 점수</string>
     <string name="admin_total_score_box_text">점수가 실시간으로 반영되고 있어요</string>
+    <string name="reject">반려</string>
+    <string name="approve">승인</string>
+    <string name="process_complete">처리 완료</string>
+    <string name="normal_attendance">정상 출석</string>
 </resources>
