feat: 임시 세션 생성 화면 구현 (#329)
* feat: 세션 생성 화면 UI 기본 세팅

* feat: 관리자 메인 화면 내에 임시 세션 생성 버튼 UI 구현

* feat: (관리자 메인) -> (세션 생성) 네비게이션 구현

* feat: 세션 생성 화면 UI 구현

* feat: 세션 날짜 생성 다이얼로그 구현

* feat: 날짜 입력 셀렉터 추가 및 코드 정리

* feat: 세션 생성 화면 진입 시 랜덤 코드를 생성하고 출력하도록 구현

* fix: 오탈자 수정

* feat: 날짜 생성 중 키보드 액션 버튼 클릭 시 후속 포커스로 넘어가도록 구현

* feat: 날짜 생성 확인 버튼 클릭 시 파싱된 데이터를 리턴하도록 구현

* fix: 세션 타입 바텀시트 텍스트 스타일 지정

* feat: 세션 생성 화면 Contract, ViewModel 구성

* feat: 날짜 생성 시 기존 선택한 날짜 데이터를 그대로 사용할 수 있게 구현

* feat: 필수 입력 필드를 입력한 경우에만 세션 버튼을 활성화하도록 구현

* feat: 세션 모델 내 code 프로퍼티 추가

* chore: 파이어스토어 세션 컬렉션 레퍼런스 추가

* feat: 파이어스토어 세션 조회, 생성 API 구현

* feat: 세션 생성 유스케이스 구현

* feat: 세션 생성 화면 API 연동

* refactor: 세션 정보 데이터소스 변경

* Remote Config -> Firestore 변경

* feat: 세션 생성 정책 적용

* auto increment

* refactor: 세션 날짜 선택 다이얼로그 내 State holder 적용

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
 
     <string name="admin_total_score_title">누적 출결 점수</string>
     <string name="admin_total_score_box_text">점수가 실시간으로 반영되고 있어요</string>
+
+    <string name="create_session">세션 생성</string>
     <string name="reject">반려</string>
     <string name="approve">승인</string>
     <string name="process_complete">처리 완료</string>
